@@ -1,3 +1,7 @@
+2005-07-18 Alain Magloire
+	new launch constant for the MI protocol
+	* src/org/eclipse/cdt/debug/core/ICDTLaunchConfigurationConstants.java
+
 2005-07-14 Mikhail Khodjaiants
 	Bug 103917: NPE in Variables View.
 	* AbstractCValue.java
